tests/model/error/fo.smt2
(set-logic ALL)
(declare-fun p (Int) Bool)
(assert (forall ((x Int)) (p x)))
(check-sat)
